...
                      <Text className="text-xs text-slate-500 dark:text-slate-400">
                        {t("auto_confirm_description")}
                      </Text>
                    </View>
                  </View>
                  <Switch
                    testID="live-sms-auto-confirm-switch"
                    value={autoConfirmSms}
                    onValueChange={handleToggleAutoConfirm}
                    disabled={!liveDetection}
                    trackColor={{
                      false: palette.slate[400],
                      true: palette.nileGreen[500],
...
