{
  "add_transaction": "Add Transaction",
  "edit_transaction": "Edit Transaction",
  "edit_transfer": "Edit Transfer",
  "transaction_count_zero": "{{count}} transactions",
  "transaction_count_one": "{{count}} transaction",
  "transaction_count_two": "{{count}} transactions",
  "transaction_count_few": "{{count}} transactions",
  "transaction_count_many": "{{count}} transactions",
...
